# HLS-Tiny-Tutorials

coding_pointer_basic/: pointer_basic.hpp
coding_pointer_basic/verilator/: CMakeLists.txt  pointer_basic_wrap.v  sim_main.cpp
interface_axi_lite/verilator/: CMakeLists.txt  readme.md  sim_main.cpp  verilator_dut.v
interface_axi_master/verilator/: CMakeLists.txt  readme.md  sim_main.cpp  verilator_dut.v
interface_axi_stream_complex_tlast/: example.cpp
interface_axi_stream_complex_tlast/verilator/: CMakeLists.txt  readme.md  sim_main.cpp  verilator_dut.v
